# personal-knowledge-ai

./: .gitignore  AGENT_AND_API_DESIGN.md  CHAT_HISTORY_DESIGN.md  CHAT_HISTORY_DESIGN_MONGO.md  EMBEDDING_DESIGN.md  EVALPIPELINE.md  GEMINI.md  INTERFACE_AND_OPS_DESIGN.md  README.md  SKILL.md  WIKI_SCHEMA.md  WORK_HISTORY.md  app.py  brainstorming.skill  brainstorming.txt  chainlit.md  chainlit_vi.md  ingest.py  main.py  plan.md  pyproject.toml  test_chart_pipeline.py  visualize.py
app/: agent.py  chainlit_citations.py  chainlit_streaming.py  chainlit_uploads.py  prompt_store.py  tools.py  visualizer_html.py
eval/: _html_report.py  _report_builders.py  _scenarios.py  conftest.py  dataset_generation.py  dataset_manifest.py  diagnostic_report.py  export_feedback_regressions.py  failure_modes.py  gate.py  generate_datasets.py  generate_report.py  judge.py  metric_capture.py  metric_selection.py  pipeline.py  production_feedback.py  test_agent_prompt_parallelism.py  test_conversation_dataset.py  test_dataset_manifest.py  test_diagnostic_report.py  test_diagnostic_trace_writer.py  test_failure_modes.py  test_gate.py  test_generate_report.py  test_langgraph_runtime.py  test_metric_capture.py  test_metric_selection.py  test_multi_turn.py  test_parallel_function_calling.py  test_pipeline.py  test_production_feedback.py  test_report_builders.py  test_single_turn.py  test_single_turn_metrics.py  test_trace_capture.py  test_universal_knowledge_search.py  trace_capture.py
graph/: graph.pkl  state.json  visualizer.html
scratch/: check_headroom_savings.py  load_test.py  (+4 more)
(+165 files in other folders)
