[project]
name = "personal-knowledge-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.11.1",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "ruff>=0.15.16",
    "uvicorn>=0.49.0",
    "python-dotenv>=1.0.1",
    "pygithub>=2.9.1",
    "atlassian-python-api>=4.0.7",
    "networkx>=3.6.1",
    "qdrant-client>=1.18.0",
    "beautifulsoup4>=4.15.0",
    "google-generativeai>=0.8.6",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "redis>=8.0.0",
    "rank-bm25>=0.2.2",
    "apscheduler>=3.11.2",
]
